--- a/notebookcompare/notebookapp/templates/detailbrand.html
+++ b/notebookcompare/notebookapp/templates/detailbrand.html
@@ -3,8 +3,16 @@
 
 {% block content %}
 
-<h1>detail brand</h1>
-{{ brand }}
+	
+		
+		<h2>{{ name }}</h2>  <h3>{{ country }}  </h3>
+		<a href="{{ web }}"> Website </a>
+		
+		</br>
+
+
+
+
 {% endblock %}
 
 
