new pages: list of models ordered by brand new to do on main page

--- a/notebookcompare/notebookapp/templates/base.html
+++ b/notebookcompare/notebookapp/templates/base.html
@@ -15,6 +15,7 @@ href="{% static "css/style.css" %}"/>
 <h3>Menu</h3>
 <a href="/">Home</a> <br />
 <a href="/brands">List of Brands</a><br />
+<a href="/models">List of Models</a><br />
 
 	</div>
 
