--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -3,6 +3,18 @@
 
 {% block content %}
 
+ <h3>WORKING</h3>
+	- List of brands</br>
+	- Details of a brand</br>
 
+
+ </h3>PENDING</h3>
+	
+	- List of models</br>
+
+	- List of Components (like CPU, RAM,.. not the specs)</br>
+	- Detail of 1 component , give all the specs relating to that component  (like CPU --> intel i5, i7...)</br>
+	- Details of 1 model , here give all the info from components to it's specs and manufacturer.</br>
+	- Pray to GOD.</br>
 
 {% endblock %}
