--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -6,11 +6,11 @@
  <h3>WORKING</h3>
 	- List of brands</br>
 	- Details of a brand</br>
-
+	- List of models orderded by brand</br>
 
  </h3>PENDING</h3>
 	
-	- List of models</br>
+	
 
 	- List of Components (like CPU, RAM,.. not the specs)</br>
 	- Detail of 1 component , give all the specs relating to that component  (like CPU --> intel i5, i7...)</br>
