new minor changes. new model details page

--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -8,13 +8,14 @@
 	- Details of a brand</br>
 	- List of models orderded by brand</br>
 
- </h3>PENDING</h3>
-	
-	
-
+ <h3>PENDING</h3>
+	- Details of 1 model , here give all the info from components to it's specs and manufacturer.</br>
+	<b> pending to parse the components and specs </b>
+	<b> pending to make a link to the brand </b>
+</br></br>
 	- List of Components (like CPU, RAM,.. not the specs)</br>
 	- Detail of 1 component , give all the specs relating to that component  (like CPU --> intel i5, i7...)</br>
-	- Details of 1 model , here give all the info from components to it's specs and manufacturer.</br>
+	
 	- Pray to GOD.</br>
 
 {% endblock %}
