- Details of 1 model , here give all the info from components to it's specs and manufacturer.</br>

--- a/notebookcompare/notebookapp/templates/base.html
+++ b/notebookcompare/notebookapp/templates/base.html
@@ -17,6 +17,8 @@ href="{% static "css/style.css" %}"/>
 <a href="/brands">List of Brands</a><br />
 <a href="/models">List of Models</a><br />
 
+<a href="/admin">Admin</a><br />
+
 	</div>
 
 <div id="Content"><h1>{{ titlehead}}</h1>{% block content %}{% endblock %}</div>	
