lot of things...

--- a/notebookcompare/notebookapp/templates/detailbrandmodel.html
+++ b/notebookcompare/notebookapp/templates/detailbrandmodel.html
@@ -24,7 +24,7 @@
 		</br>
 
 		{% endfor %}
-		{% if model|length > 0 %}
+		{% if model|length = 0 %}
 			<h3>The selected brand has no models at the moment</h3>
 		{% endif %}
 
