--- a/notebookcompare/notebookapp/templates/detailbrandmodel.html
+++ b/notebookcompare/notebookapp/templates/detailbrandmodel.html
@@ -5,7 +5,7 @@
 
 	
 		<center>
-		{% if pictureurl|length > 0 %}
+		{% if brandpictureurl|length > 0 %}
 			<img src="{{ brandpictureurl }}"> </img>
 		{% endif %}
 
@@ -16,17 +16,19 @@
 		</br>
 		</center>
 
-<center>
+<h3>Models for {{brandname}}</h3>
 		{% for model in all_models_brand %}
 
 		<B>{{ model.brand}}</b>  <B>{{ model.name }}</b>  Price: {{ model.price }} €   <a href="/models/{{ model.name  }}"> Notebook Details </a> 
+
 		
 		</br>
-
+		{% empty %}
+    		Sorry, we have no models of this brand!
 		{% endfor %}
-		{% if model|length = 0 %}
-			<h3>The selected brand has no models at the moment</h3>
-		{% endif %}
+		
+			
+		
 
 
 
