--- a/notebookcompare/notebookapp/templates/detailcomponent.html
+++ b/notebookcompare/notebookapp/templates/detailcomponent.html
@@ -7,7 +7,7 @@
 		
 
 		{% for component in spec %}
-			{{ component.name }} <a href="/components/{{component.id}}"> Busca Portàtils</a></br>
+			{{ component.name }} <a href="/specifications/{{component.id}}"> Busca Portàtils</a></br>
 			
 		{% endfor %}
 		</br>
