--- a/notebookcompare/notebookapp/templates/listmodelsspec.html
+++ b/notebookcompare/notebookapp/templates/listmodelsspec.html
@@ -5,9 +5,11 @@
 
 	
 		
-
+		Listing all computers found:
+		</br>
 		{% for component in spec %}
-			{{ component.component }}  {{ component.name }} <a href="/specifications/{{component.id}}"> Busca Portàtils</a></br>
+			{{ component.name }} <a href="/models/{{component.name}}"> Model Details </a></br>
+		
 			
 		{% endfor %}
 		</br>
