minor changes, new homepage

--- a/notebookcompare/notebookapp/templates/base.html
+++ b/notebookcompare/notebookapp/templates/base.html
@@ -16,7 +16,8 @@ href="{% static "css/style.css" %}"/>
 <a href="/">Home</a> <br />
 <a href="/brands">List of Brands</a><br />
 <a href="/models">List of Models</a><br />
-<a href="/components">List of Components</a><br />
+<a href="/components">List of Components</a></br>
+<a href="/specifications">List of Specifications</a><br />
 
 <a href="/admin">Admin</a><br />
 
