--- a/notebookcompare/notebookapp/templates/detailspecifications.html
+++ b/notebookcompare/notebookapp/templates/detailspecifications.html
@@ -7,7 +7,7 @@
 		
 
 		{% for component in spec %}
-			{{ component.component }}  {{ component.name }} <a href="/specifications/{{component.id}}"> Busca Portàtils</a></br>
+			{{ component.component }}  {{ component.name }} <a href="/specifications/{{component.id}}"> Search by this specification</a></br>
 			
 		{% endfor %}
 		</br>
