--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -2,21 +2,22 @@
 
 
 {% block content %}
+<h2> Welcome to our notebookcompare application!</h2>
 
- <h3>WORKING</h3>
-	- List of brands</br>
-	- Details of a brand</br>
-	- List of models orderded by brand</br>
-	- Details of 1 model , here give all the info from components to it's specs and manufacturer.</br>
-- List of Components (like CPU, RAM,.. not the specs)</br>
+<h3>With this app you can:</h3>
+<li><a href="/brands/">View a list with all our brands </a></li>
+<li><a href="/brands/ASUS">View the brand details (for example ASUS) </a></li>
+<li><a href="/brands/ASUS/models/">View all the brand notebook models (for example ASUS) </a></li>
+</br>
+<li><a href="/models/">View a list with all our models </a></li>
+<li><a href="/models/Z930">View the notebook details details (for example Z930) </a></li>
+</li>
+</br>
+<li><a href="/components/">View a list with all the components avaible and search your notebook trough the list </a></li>
+<li><a href="/components/CPU">View a list with the diferents specifications of a component (for example CPU) </a></li>
+<br>
+<li><a href="/specifications/">View a list with all the specifications avaible </a></li>
+<li><a href="/specifications/5">View a list with a specific specification (for example Intel Core i5) </a></li>
 
- <h3>PENDING</h3>
-
-	
-</br></br>
-	
-	- Detail of 1 component , give all the specs relating to that component  (like CPU --> intel i5, i7...)</br>
-	
-	- Pray to GOD.</br>
 
 {% endblock %}
