--- a/notebookcompare/notebookapp/templates/detailcomponent.html
+++ b/notebookcompare/notebookapp/templates/detailcomponent.html
@@ -8,7 +8,8 @@
 
 		{% for component in spec %}
 			{{ component.name }} <a href="/specifications/{{component.id}}"> Search by this specification</a></br>
-			
+			{% empty %}
+    		Sorry, we have no components!
 		{% endfor %}
 		</br>
 		</center>
