--- a/notebookcompare/notebookapp/templates/models.html
+++ b/notebookcompare/notebookapp/templates/models.html
@@ -10,7 +10,8 @@
 		<B>{{ model.brand}}</b>  <B>{{ model.name }}</b>  Price: {{ model.price }} €   <a href="/models/{{ model.name  }}"> Notebook Details </a> 
 		
 		</br>
-
+		{% empty %}
+    		Sorry, we have no models!
 	{% endfor %}
 
 
