--- a/notebookcompare/notebookapp/templates/base.html
+++ b/notebookcompare/notebookapp/templates/base.html
@@ -9,7 +9,7 @@ href="{% static "css/style.css" %}"/>
 
 <body>
 
-<div id="Header">Notebook Compare </a></div>
+<div id="Header">Notebook Compare </div>
 
 	<div id="Menu">
 <h3>Menu</h3>
