--- a/notebookcompare/notebookapp/templates/brands.html
+++ b/notebookcompare/notebookapp/templates/brands.html
@@ -8,8 +8,8 @@
 	{% for brand in all_brands %}
 
 		<B>{{ brand.name }}</b>  {{ brand.country }}  
-		<a href="{{ brand.web }}"> Website </a> 
-		<a href="/brands/{{ brand.name }}"> Brand Details </a>
+		<a href="{{ brand.web }}"> Website </a>  | 
+		<a href="/brands/{{ brand.name }}"> Brand Details </a> | 
 		<a href="/brands/{{ brand.name }}/models/"> Brand Models </a> 
 		
 		</br>
