new readme, some minor changes cleaning useless code
Ready to release, all the points made minor JSON and XML

--- a/notebookcompare/notebookapp/templates/base.html
+++ b/notebookcompare/notebookapp/templates/base.html
@@ -3,8 +3,7 @@
 <head>
 
 	<title>{{ titlehead}} - Notebook Compare </title>
-		<link rel="stylesheet" type="text/css"
-href="{% static "css/style.css" %}"/>
+	<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}"/>
 </head>
 
 <body>
