--- a/notebookcompare/notebookapp/templates/base.html
+++ b/notebookcompare/notebookapp/templates/base.html
@@ -21,7 +21,7 @@
 <a href="/models">List of Models</a><br />
 <a href="/components">List of Components</a></br>
 <a href="/specifications">List of Specifications</a><br />
-
+<a href="/review">Review</a><br />
 <a href="/admin">Admin</a><br />
 
 	</div>
