--- a/notebookcompare/notebookapp/templates/detailmodel.html
+++ b/notebookcompare/notebookapp/templates/detailmodel.html
@@ -31,8 +31,16 @@
 		<a href="/brands/{{ brand }}/models/"> Other {{ brand }} Model </a>
 		</br>
 		</center>
-
-
+<table>
+		<th>Reviews:</th>
+		{% for review in review %}
+			<tr><td>{{ review.rating }} </td> <td>{{ review.comment }} </td>
+			<td>{{ review.user }} </td><td>{{ review.date }} </td>
+			<td>{{ review.price_found }} </td><td>{{ review.shop_name }} </td>
+			<td>{{ review.shop_url }} </td></tr>
+			
+		{% endfor %}
+</table>
                          
                          
 
