--- a/notebookcompare/notebookapp/templates/detailmodel.html
+++ b/notebookcompare/notebookapp/templates/detailmodel.html
@@ -30,6 +30,11 @@
 		
 		<a href="/brands/{{ brand }}/models/"> Other {{ brand }} Model </a>
 		</br>
+
+		</br>
+		
+		<a href="/review/{{ id }}/"> Add Review </a>
+		</br>
 		</center>
 <table>
 		<th>Reviews:</th>
