--- a/notebookcompare/notebookapp/templates/base.html
+++ b/notebookcompare/notebookapp/templates/base.html
@@ -12,7 +12,7 @@
 <div align="right">{% if user.is_authenticated %}
     <p>Welcome, {{ user.username }}. Thanks for logging in. <a href="/logout/">Logout</a></p>
 {% else %}
-    <p>Welcome, new user. Please <a href="/login/">log in.</a></p>
+    <p>Welcome, new user. Please <a href="/login/">log in</a> or <a href="/register/"> register   </a> </p>
 {% endif %} </div>
 	<div id="Menu">
 <h3>Menu</h3>
@@ -21,7 +21,7 @@
 <a href="/models">List of Models</a><br />
 <a href="/components">List of Components</a></br>
 <a href="/specifications">List of Specifications</a><br />
-<a href="/review">Review</a><br />
+<a href="/review/3/">Review</a><br />
 <a href="/admin">Admin</a><br />
 
 	</div>
