--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -26,6 +26,35 @@
 	<br>
 	<li><a href="/login/">Log in with an user </a></li>
 	<li><a href="/logout/">Log out</a></li>
+	<br>
+	<h3> New Functions</h3>
+	<li><a href="/register/">Register a new user </a></li>
+
+	<li><a href="/models/z930/">View a list of reviews of a model </a></li>
+	<h3> Pendent</h3>
+
+	<li><a href="/review/3/add">Add Review a model </a></li>
+	<li><a href="/review/3/view/">View a list of reviews of a model </a></li>
+	<li><a href="/review/3/view/id/">View a review </a></li>
+	<li><a href="/review/3/modify/id/">Modify a review </a></li>
+	<li><a href="/review/3/delete/id/">Delete a review </a></li>
+
+	Afegir model portàtil
+	Modificar model portàtil
+	Eliminar model portàtil
+
+	
+	Afegir component
+	Modificar Component
+	Eliminar Component
+
+	Canviar contrasenya
+	Llistar portàtils creats
+	llistar components creats
+	
+	
+
+
 {% endif %}
 
 
