--- a/notebookcompare/notebookapp/templates/detailmodel.html
+++ b/notebookcompare/notebookapp/templates/detailmodel.html
@@ -33,7 +33,7 @@
 
 		</br>
 		
-		<a href="/review/{{ id }}/"> Add Review </a>
+		<a href="/review/{{ id }}/add/"> Add Review </a>
 		</br>
 		</center>
 <table>
