--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -30,14 +30,15 @@
 	<h3> New Functions</h3>
 	<li><a href="/register/">Register a new user </a></li>
 
-	<li><a href="/models/z930/">View a list of reviews of a model </a></li>
-	<li><a href="/review/3/view/">View a list of reviews  </a></li>
+
+	<li><a href="/review/">View a list of reviews  </a></li>
 	<li><a href="/review/3/add">Add Review a model </a></li>
+	<li><a href="/review/1/view">View a list of reviews of a model </a></li>
+	<li><a href="/review/view/3/">View a review </a></li>
+
+
+
 	<h3> Pendent</h3>
-
-	
-
-	<li><a href="/review/3/view/id/">View a review </a></li>
 	<li><a href="/review/3/modify/id/">Modify a review </a></li>
 	<li><a href="/review/3/delete/id/">Delete a review </a></li>
 
