--- a/notebookcompare/notebookapp/templates/review_add.html
+++ b/notebookcompare/notebookapp/templates/review_add.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 	
-				<form action="/review/" method="post">{% csrf_token %}
+				<form action="/review/{{ model_id }}/add/" method="post">{% csrf_token %}
 				{{ form.as_p }}
 				<input type="submit" value="Enviar" />
 			
