<h3> New Functions</h3> 	<li><a href="/register/">Register a new user </a></li>
	<li><a href="/review/">View a list of reviews  </a></li>
	<li><a href="/review/3/add">Add Review a model </a></li>
	<li><a href="/review/1/view">View a list of reviews of a model </a></li>
	<li><a href="/review/view/3/">View a review </a></li>
	<li><a href="/models/add/">Add a new model </a></li>

Pending bugs:

	- change urls from /models/XXXXX to /models/view/XXXXXX
	- change urls from /components/XXXXX to /components/view/XXXXXX

--- a/notebookcompare/notebookapp/templates/detailmodel.html
+++ b/notebookcompare/notebookapp/templates/detailmodel.html
@@ -15,7 +15,7 @@
 		
 		Price: <b>{{ price }} € </b></br>
 		Date of launchment: {{ date }} </br></br>
-
+		Added by: {{ useradd }} </br></br>
 		<table>
 		<th>Specifications:</th>
 		
