--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -15,14 +15,14 @@
 	<li><a href="/brands/ASUS/models/">View all the brand notebook models (for example ASUS) </a></li>
 	</br>
 	<li><a href="/models/">View a list with all our models </a></li>
-	<li><a href="/models/Z930">View the notebook details details (for example Z930) </a></li>
+	<li><a href="/models/view/Z930">View the notebook details details (for example Z930) </a></li>
 	</li>
 	</br>
 	<li><a href="/components/">View a list with all the components avaible and search your notebook trough the list </a></li>
-	<li><a href="/components/CPU">View a list with the diferents specifications of a component (for example CPU) </a></li>
+	<li><a href="/components/view/CPU">View a list with the diferents specifications of a component (for example CPU) </a></li>
 	<br>
 	<li><a href="/specifications/">View a list with all the specifications avaible </a></li>
-	<li><a href="/specifications/5">View a list with a specific specification (for example Intel Core i5) </a></li>
+	<li><a href="/specifications/view/5">View a list with a specific specification (for example Intel Core i5) </a></li>
 	<br>
 	<li><a href="/login/">Log in with an user </a></li>
 	<li><a href="/logout/">Log out</a></li>
@@ -35,28 +35,32 @@
 	<li><a href="/review/3/add">Add Review a model </a></li>
 	<li><a href="/review/1/view">View a list of reviews of a model </a></li>
 	<li><a href="/review/view/3/">View a review </a></li>
-
+	<li><a href="/models/add/">Add a new model </a></li>	
 
 
 	<h3> Pendent</h3>
 	<li><a href="/review/3/modify/id/">Modify a review </a></li>
 	<li><a href="/review/3/delete/id/">Delete a review </a></li>
 
-	Afegir model portàtil
-	Modificar model portàtil
-	Eliminar model portàtil
-
+	<li><a href="/models/modify/id/">Modificar model portàtil </a></li>
+	<li><a href="/models/delete/id/">Eliminar model portàtil</a></li>
 	
-	Afegir component
-	Modificar Component
-	Eliminar Component
+	
+	<li><a href="/components/add/">Add a new component </a></li>	
+	<li><a href="/specifications/add/">Add a new specification</a></li>	
 
 	Canviar contrasenya
-	Llistar portàtils creats
-	llistar components creats
+	Llistar portàtils creats per un usuari
+	Control Panel
+
+	
 	
 	
 
+	Pending bugs:
+	
+	- change urls from /models/XXXXX to /models/view/XXXXXX
+	- change urls from /components/XXXXX to /components/view/XXXXXX
 
 {% endif %}
 
