--- a/notebookcompare/notebookapp/templates/registration/login.html
+++ b/notebookcompare/notebookapp/templates/registration/login.html
@@ -20,7 +20,7 @@
 </table>
 
 <input type="submit" value="login" />
-<input type="hidden" name="next" value="/" />
+<input type="hidden" name="next" value="/userpanel/" />
 </form>
 
 <p>You can register <a href="/register">here</a></p>
