--- a/notebookcompare/notebookapp/templates/review_view.html
+++ b/notebookcompare/notebookapp/templates/review_view.html
@@ -9,7 +9,7 @@
 			<tr><td>{{ review.model }} </td><td>{{ review.rating }} </td> <td>{{ review.comment }} </td>
 			<td>{{ review.user }} </td><td>{{ review.date }} </td>
 			<td>{{ review.price_found }} </td><td>{{ review.shop_name }} </td>
-			<td>{{ review.shop_url }} </td><td><a href="/review/view/{{ review.pk }}">View review </a> </td></tr>
+			<td>{{ review.shop_url }} </td><td><a href="/models/{{ review.model }}">View model</a> </td></tr>
 			
 		{% endfor %}
 </table>
