--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -39,6 +39,9 @@
 
 
 	<h3> Pendent</h3>
+
+	<li><a href="/components/add/">Add a new component </a></li>	
+
 	<li><a href="/review/3/modify/id/">Modify a review </a></li>
 	<li><a href="/review/3/delete/id/">Delete a review </a></li>
 
@@ -46,7 +49,7 @@
 	<li><a href="/models/delete/id/">Eliminar model portàtil</a></li>
 	
 	
-	<li><a href="/components/add/">Add a new component </a></li>	
+
 	<li><a href="/specifications/add/">Add a new specification</a></li>	
 
 	Canviar contrasenya
@@ -61,6 +64,24 @@
 	
 	- change urls from /models/XXXXX to /models/view/XXXXXX
 	- change urls from /components/XXXXX to /components/view/XXXXXX
+
+
+
+
+    (2,5 puntos) Permitir que los usuarios registrados creen nuevas instancias de los objetos del modelo, siempre que tenga sentido que los usuarios las creen.
+    (2,5 puntos) Permitir que los usuarios modifiquen instancias de objetos, por ejemplo que puedan modificar las instancias creadas por ellos mismos.
+    (1 punto) Permitir que los usuarios borren instancias de los objetos del modelo, normalmente las creadas por ellos mismos.
+    Incorporar en alguno de los formularios utilizados para crear o modificar instancias, funcionalidad basada en AJAX (por ejemplo utilizando la librería JQuery) que asista a los usuarios mientras editan alguno de los campos del formulario. Por ejemplo, para el campo país de una dirección. Opciones:
+    (1,5 puntos) Obtener las opciones de autocompletado a partir de una estructura JSON estática definida localmente. Por ejemplo, en el propio template que contiene el formulario y el código Javascript, aunque se valorará que se carguen los datos de un fichero independiente.
+        (1,5 puntos) Obtener las opciones de autocompletado de manera remota, desde un servicio web remoto que, a las consultas con lo que ha escrito hasta el momento el usuario en la entrada del formulario, responde con posible opciones de autocompletado, por ejemplo mediante JSON.
+    (1 punto) Desarrollar una API RESTful para la aplicación utilizando la librería Django REST Framework (http://django-rest-framework.org). La API se ofrecerá de forma separada a la interfaz de usuario, por ejemplo desde /myapp/api/…, y permitirá acceder de manera RESTful a las operaciones de creación, consulta, modificación y borrado de las mismas entidades que la interfaz HTML. La API deberá servir como mínimo JSON.
+
+Nota 1: Las operaciones de alta, baja y modificación por parte de los usuarios deben estar disponibles a través de la interfaz HTML de la aplicación, sin necesidad de recurrir a la interfaz de administración de Django.
+ 
+Nota 2: Se recomienda el uso de ClassViews y ModelForms para implementar las funcionalidades de alta, baja y modificación. Se puede utilizar como modelo el tutorial disponible desde la sección de recursos del Campus Virtual: “Django Web 2.0 Tutorial”.
+ 
+
+
 
 {% endif %}
 
