--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -36,11 +36,16 @@
 	<li><a href="/review/1/view">View a list of reviews of a model </a></li>
 	<li><a href="/review/view/3/">View a review </a></li>
 	<li><a href="/models/add/">Add a new model </a></li>	
-
+	<li><a href="/components/add/">Add a new component </a></li>	
 
 	<h3> Pendent</h3>
 
-	<li><a href="/components/add/">Add a new component </a></li>	
+	
+	<li><a href="/specifications/add/">Add a new specification</a></li>
+
+	<li><a href="/brands/add/">Add a new brand</a></li>
+
+
 
 	<li><a href="/review/3/modify/id/">Modify a review </a></li>
 	<li><a href="/review/3/delete/id/">Delete a review </a></li>
@@ -50,7 +55,7 @@
 	
 	
 
-	<li><a href="/specifications/add/">Add a new specification</a></li>	
+		
 
 	Canviar contrasenya
 	Llistar portàtils creats per un usuari
@@ -64,6 +69,7 @@
 	
 	- change urls from /models/XXXXX to /models/view/XXXXXX
 	- change urls from /components/XXXXX to /components/view/XXXXXX
+	- change urls from /brands/XXXXX to /brands/view/XXXXXX
 
 
 
