changes on the review add now goes to the model

--- a/notebookcompare/notebookapp/templates/brands/brands.html
+++ b/notebookcompare/notebookapp/templates/brands/brands.html
@@ -9,8 +9,8 @@
 
 		<B>{{ brand.name }}</b>  {{ brand.country }}  
 		<a href="{{ brand.web }}"> Website </a>  | 
-		<a href="/brands/{{ brand.name }}"> Brand Details </a> | 
-		<a href="/brands/{{ brand.name }}/models/"> Brand Models </a> 
+		<a href="/brands/view/{{ brand.name }}"> Brand Details </a> | 
+		<a href="/brands/view/{{ brand.name }}/models/"> Brand Models </a> 
 		
 		</br>
 
