--- a/notebookcompare/notebookapp/templates/brands/detailbrandmodel.html
+++ b/notebookcompare/notebookapp/templates/brands/detailbrandmodel.html
@@ -19,7 +19,7 @@
 <h3>Models for {{brandname}}</h3>
 		{% for model in all_models_brand %}
 
-		<B>{{ model.brand}}</b>  <B>{{ model.name }}</b>  Price: {{ model.price }} €   <a href="/models/{{ model.name  }}"> Notebook Details </a> 
+		<B>{{ model.brand}}</b>  <B>{{ model.name }}</b>  Price: {{ model.price }} €   <a href="/models/view/{{ model.name  }}"> Notebook Details </a> 
 
 		
 		</br>
