--- a/notebookcompare/notebookapp/templates/models/detailmodel.html
+++ b/notebookcompare/notebookapp/templates/models/detailmodel.html
@@ -10,7 +10,7 @@
 		{% endif %}
 
 		<h2>{{ brand }}  {{ name }}</h2> 
-		Brand:  <a href="/brands/{{ brand }}"> 
+		Brand:  <a href="/brands/view/{{ brand }}"> 
 		{{ brand }} </a>  </br>
 		
 		Price: <b>{{ price }} € </b></br>
@@ -28,7 +28,7 @@
 		</table>
 		</br>
 		
-		<a href="/brands/{{ brand }}/models/"> Other {{ brand }} Model </a>
+		<a href="/brands/view/{{ brand }}/models/"> Other {{ brand }} Model </a>
 		</br>
 
 		</br>
