--- a/notebookcompare/notebookapp/templates/components/components.html
+++ b/notebookcompare/notebookapp/templates/components/components.html
@@ -9,7 +9,7 @@
 <p> Select which component you want to search by </p>
 	{% for name in all_components %}
 
-		<a href="/components/{{ name }}">{{ name }}</a> </br>
+		<a href="/components/view/{{ name }}">{{ name }}</a> </br>
 
 	{% endfor %}
 
