--- a/notebookcompare/notebookapp/templates/components/detailcomponent.html
+++ b/notebookcompare/notebookapp/templates/components/detailcomponent.html
@@ -7,7 +7,7 @@
 		
 
 		{% for component in spec %}
-			{{ component.name }} <a href="/specifications/{{component.id}}"> Search by this specification</a></br>
+			{{ component.name }} <a href="/specifications/view/{{component.id}}"> Search by this specification</a></br>
 			{% empty %}
     		Sorry, we have no components!
 		{% endfor %}
