--- a/notebookcompare/notebookapp/templates/models/models.html
+++ b/notebookcompare/notebookapp/templates/models/models.html
@@ -7,7 +7,7 @@
 
 	{% for model in all_models %}
 
-		<B>{{ model.brand}}</b>  <B>{{ model.name }}</b>  Price: {{ model.price }} €   <a href="/models/{{ model.name  }}"> Notebook Details </a> 
+		<B>{{ model.brand}}</b>  <B>{{ model.name }}</b>  Price: {{ model.price }} €   <a href="/models/view/{{ model.name  }}"> Notebook Details </a> 
 		
 		</br>
 		{% empty %}
