--- a/notebookcompare/notebookapp/templates/add_form.html
+++ b/notebookcompare/notebookapp/templates/add_form.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 	
-				<form action="{{ ruta }}" method="post">{% csrf_token %}
+				<form action="" method="post">{% csrf_token %}
 				{{ form.as_p }}
 				<input type="submit" value="Enviar" />
 			
