--- a/notebookcompare/notebookapp/templates/base.html
+++ b/notebookcompare/notebookapp/templates/base.html
@@ -4,6 +4,11 @@
 
 	<title>{{ titlehead}} - Notebook Compare </title>
 	<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}"/>
+     	<script type="text/javascript"
+            src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script type="text/javascript" src="{% static "js/flexigrid.pack.js" %}"></script>
+	<link rel="stylesheet" type="text/css" href="{% static "css/flexigrid.pack.css" %}" />
+
 </head>
 
 <body>
