--- a/notebookcompare/notebookapp/templates/models/detailmodel.html
+++ b/notebookcompare/notebookapp/templates/models/detailmodel.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-
+{% load staticfiles %}
 {% block content %}
 
 	
@@ -40,10 +40,10 @@
 <table id="flex1" width="auto" style="display:none">
 		<thead>
 			<tr>
-				<th width="100">Rating</th>
-				<th width="300">Comment</th>
 				<th width="100">User</th>
 				<th width="100">Date</th>
+				<th width="100">Rating</th>
+				<th width="300">Comment</th>
 				<th width="100">Price found</th>
 				<th width="100">Shop Name</th>
 				<th width="100">Shop URL</th>
@@ -53,14 +53,14 @@
 		{% for review in review %}
 
 			<tr>
-			<td>{{ review.rating }} </td>
-			<td>{{ review.comment }} </td>
 			<td>{{ review.user }} </td>
 			<td>{{ review.date }} </td>
+			<td>{{ review.rating }} </td>
+			<td>{{ review.comment }} </td>
 			<td>{{ review.price_found }} </td>
 			<td>{{ review.shop_name }} </td>
 			<td>{{ review.shop_url }} </td>
-			<td>{{ review.pk }} </td></tr>
+			<td><a href="/review/view/{{ review.pk }}"><img src="{% static "imatges/lupa.png" %}" width="30"></img></a> </td></tr>
 			
 		{% endfor %}
 </table>
