user panel review

--- a/notebookcompare/notebookapp/templates/userpanel.html
+++ b/notebookcompare/notebookapp/templates/userpanel.html
@@ -4,8 +4,8 @@
 {% block content %}
 
 	Change Password </ br>
-	list user reviews </ br>
-	list model added </ br>
+	<a href="/userpanel/my-reviews/">list user reviews</a> </ br>
+	<a href="/userpanel/my-laptops/">list user laptops</a> </ br>
 	
 
 
