--- a/notebookcompare/notebookapp/templates/review/review_view.html
+++ b/notebookcompare/notebookapp/templates/review/review_view.html
@@ -9,8 +9,8 @@
 			<b> User: </b> {{ review.user }} <br/>
 			<b> Date: </b> {{ review.date }} <br/>
 			<b> Model: </b> {{ review.model }} <br/>
-			<b> Rating </b> {{ review.rating }}  <br/> 
-			<b> Comment </b> {{ review.comment }}  <br/>
+			<b> Rating: </b> {{ review.rating }}  <br/> 
+			<b> Comment: </b> {{ review.comment }}  <br/>
 			<b> Price found: </b> {{ review.price_found }} <br/>
 			
 			<b> Shop: </b><a href="http://{{ review.shop_url }}"> {{ review.shop_name }}</a> <br/>
