--- a/notebookcompare/notebookapp/templates/models/detailmodel.html
+++ b/notebookcompare/notebookapp/templates/models/detailmodel.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
-
+{% block head %}
+     	<script type="text/javascript"
+            src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+{% endblock %}
 {% load staticfiles %}
 {% block content %}
 
