--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -55,13 +55,7 @@
 	
 	
 
-		
 
-	Canviar contrasenya
-	Llistar portàtils creats per un usuari
-	Control Panel
-
-	
 	
 <p>	
      <b>done</b>(2,5 puntos) Permitir que los usuarios registrados creen nuevas instancias de los objetos del modelo, siempre que tenga sentido que los usuarios las creen.<p>
@@ -70,6 +64,7 @@
 </br>
 
 (2,5 puntos) Permitir que los usuarios modifiquen instancias de objetos, por ejemplo que puedan modificar las instancias creadas por ellos mismos.</br>
+<b> Can edit Components , Specifications, !!!!reviews (needs to check if it's own review!!!!!), FALTA MODELS PROPIS!!!!!!!</b>
 
 
 </br>
@@ -77,9 +72,11 @@
     Incorporar en alguno de los formularios utilizados para crear o modificar instancias, funcionalidad basada en AJAX (por ejemplo utilizando la librería JQuery) que asista a los usuarios mientras editan alguno de los campos del formulario. Por ejemplo, para el campo país de una dirección.
 
 
-    (1,5 puntos) Obtener las opciones de autocompletado a partir de una estructura JSON estática definida localmente. Por ejemplo, en el propio template que contiene el formulario y el código Javascript, aunque se valorará que se carguen los datos de un fichero independiente.</br>
+   <b>done</b>  (1,5 puntos) Obtener las opciones de autocompletado a partir de una estructura JSON estática definida localmente. Por ejemplo, en el propio template que contiene el formulario y el código Javascript, aunque se valorará que se carguen los datos de un fichero independiente.</br>
        
 <b> fet, en l'apartat brand</b>
+
+
 </br>
  (1,5 puntos) Obtener las opciones de autocompletado de manera remota, desde un servicio web remoto que, a las consultas con lo que ha escrito hasta el momento el usuario en la entrada del formulario, responde con posible opciones de autocompletado, por ejemplo mediante JSON.</br>
 
