--- a/notebookcompare/notebookapp/templates/userpanel/mylaptops.html
+++ b/notebookcompare/notebookapp/templates/userpanel/mylaptops.html
@@ -31,7 +31,7 @@
 			<td><a href="/models/edit/{{ model.pk }}"><img src="{% static "imatges/pencil.png" %}" width="30"></img></a> </td></tr>			
 			
 			{% empty %}
-    		Sorry, we have no models!
+    		Sorry, you have not got any models! 
 	{% endfor %}
 </table>
 </div>
