--- a/notebookcompare/notebookapp/templates/review/review_list.html
+++ b/notebookcompare/notebookapp/templates/review/review_list.html
@@ -1,24 +1,62 @@
 {% extends "base.html" %}
-
-
+{% block head %}
+     	<script type="text/javascript"
+            src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+{% endblock %}
+{% load staticfiles %}
 {% block content %}
-	
-				<table>
-		<th>Reviews:</th>
+
+
+<div>
+<table id="flex1" width="auto" style="display:none">
+		<thead>
+			<tr>
+				<th width="100">User</th>
+				<th width="100">Date</th>
+				<th width="100">Rating</th>
+				<th width="300">Comment</th>
+				<th width="100">Price found</th>
+				<th width="100">Shop Name</th>
+				<th width="100">View</th>
+				<th width="100">Edit</th>
+			</tr>
+		</thead>
 		{% for review in review %}
-			<tr><td>{{ review.model }} </td><td>{{ review.rating }} </td> <td>{{ review.comment }} </td>
-			<td>{{ review.user }} </td><td>{{ review.date }} </td>
-			<td>{{ review.price_found }} </td><td>{{ review.shop_name }} </td>
-			<td>{{ review.shop_url }} </td><td><a href="/review/view/{{ review.pk }}">View review </a> </td></tr>
+
+			<tr>
+			<td>{{ review.user }} </td>
+			<td>{{ review.date }} </td>
+			<td>{{ review.rating }} </td>
+			<td>{{ review.comment }} </td>
+			<td>{{ review.price_found }} </td>
+			<td>{{ review.shop_name }} </td>
+			<td><a href="/review/view/{{ review.pk }}"><img src="{% static "imatges/lupa.png" %}" width="30"></img></a> </td>
+			<td><a href="/review/edit/{{ review.pk }}"><img src="{% static "imatges/pencil.png" %}" width="30"></img></a> </td></tr>			
 			
 		{% endfor %}
 </table>
-	
+</div>
+       <script type="text/javascript">
+$("#flex1").flexigrid({width:'auto',height:'auto'});
 
+//This function adds paramaters to the post of flexigrid. You can add a verification as well by return to false if you don't want flexigrid to submit			
+function addFormData(){
+	//passing a form object to serializeArray will get the valid data from all the objects, but, if the you pass a non-form object, you have to specify the input elements that the data will come from
+	var dt = $('#sform').serializeArray();
+	$("#flex1").flexOptions({params: dt});
+	return true;
+}
 
-
+$('#sform').submit(function (){
+	$('#flex1').flexOptions({newp: 1}).flexReload();
+	return false;
+});
+</script>                  
+                      
 
 {% endblock %}
+
+
 
 
    
