minor ui changes

--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -41,17 +41,17 @@
 	<li><a href="/specifications/edit/16">EDIT specification</a></li>
 	
 	<li><a href="/brands/add/">Add a new brand</a></li>
+	<li><a href="/review/delete/1">Delete a review </a></li>
+
+        <li><a href="/review/edit/1">Modify a review </a></li>
+	<li><a href="/models/edit/1">Modificar model portàtil </a></li>
+	<li><a href="/models/delete/1/">Eliminar model portàtil</a></li>
+
+
 
 
 	
 
-	<h3> Pendent</h3>
-
-	<li><a href="/review/3/modify/id/">Modify a review </a></li>
-	<li><a href="/review/3/delete/id/">Delete a review </a></li>
-
-	<li><a href="/models/modify/id/">Modificar model portàtil </a></li>
-	<li><a href="/models/delete/id/">Eliminar model portàtil</a></li>
 	
 	
 
@@ -71,7 +71,7 @@
 </br>
     (1 punto) Permitir que los usuarios borren instancias de los objetos del modelo, normalmente las creadas por ellos mismos.
     
-
+<b>delete review</b>
 
 
 </br>
