--- a/notebookcompare/notebookapp/templates/brands/add_form.html
+++ b/notebookcompare/notebookapp/templates/brands/add_form.html
@@ -5,47 +5,17 @@
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 {% endblock %}
 {% block content %}
-  <script>
-        $(function() {
-            $.getJSON("{% static "countries.json" %}", {}, function (countries) {
-                $("#id_country").autocomplete({
-                    source: countries
-                });
-            });
+  
 
-            $("#id_city").autocomplete({
-                source: function( request, response ) {
-                    $.ajax({
-                        url: "http://ws.geonames.org/searchJSON",
-                        dataType: "jsonp",
-                        data: {
-                            featureClass: "P",
-                            maxRows: 10,
-                            name_startsWith: request.term
-                        },
-                        success: function( data ) {
-                            response( $.map( data.geonames, function( item ) {
-                                return {
-                                    label: item.name + (item.adminName1 ? ", " + item.adminName1 : "") + ", " + item.countryName,
-                                    value: item.name,
-                                    stateOrProvince: item.adminName1,
-                                    countryName: item.countryName
-                                }
-                            }));
-                        }
-                    });
-                },
-                minLength: 2,
-                select: function( event, ui ) {
-                    if (ui.item) {
-                        $("#id_stateOrProvince").val(ui.item.stateOrProvince);
-                        $("#id_country").val(ui.item.countryName);
-                        $("#id_zipCode").val("");
-                    }
-                }
-            });
-        });
-    </script>
+<script>
+$(function()	{
+$.getJSON('{% static "countries.json" %}', function(data) {
+$("#id_country"	).autocomplete({
+source:	data
+});
+});
+});
+</script>
 
 				<form action="" method="post">{% csrf_token %}
 				{{ form.as_p }}
