--- a/notebookcompare/notebookapp/templates/mainpage.html
+++ b/notebookcompare/notebookapp/templates/mainpage.html
@@ -63,15 +63,13 @@
 
 </br>
 
-(2,5 puntos) Permitir que los usuarios modifiquen instancias de objetos, por ejemplo que puedan modificar las instancias creadas por ellos mismos.</br>
-<b> Can edit Components , Specifications, revies,models </b>
-<h2>falta acabarde comprobar si es realment l'usuari</h2>
-
+<b>done</done>(2,5 puntos) Permitir que los usuarios modifiquen instancias de objetos, por ejemplo que puedan modificar las instancias creadas por ellos mismos.</br>
+<b> Can edit Components , Specifications, reviews,models </b>
 
 </br>
-    (1 punto) Permitir que los usuarios borren instancias de los objetos del modelo, normalmente las creadas por ellos mismos.
+<b>done</b>    (1 punto) Permitir que los usuarios borren instancias de los objetos del modelo, normalmente las creadas por ellos mismos.
     
-<b>delete review</b>
+<b>delete review, delete model</b>
 
 
 </br>
