--- a/notebookcompare/notebookapp/templates/review/review_add.html
+++ b/notebookcompare/notebookapp/templates/review/review_add.html
@@ -1,7 +1,53 @@
 {% extends "base.html" %}
-
-
+{% load staticfiles %}
+{% block head %}
+ <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+{% endblock %}
 {% block content %}
+
+  <script>
+        $(function() {
+            $.getJSON("{% static "countries.json" %}", {}, function (countries) {
+                $("#id_shop_country").autocomplete({
+                    source: countries
+                });
+            });
+
+            $("#id_shop_city").autocomplete({
+                source: function( request, response ) {
+                    $.ajax({
+                        url: "http://ws.geonames.org/searchJSON",
+                        dataType: "jsonp",
+                        data: {
+                            featureClass: "P",
+                            maxRows: 10,
+                            name_startsWith: request.term
+                        },
+                        success: function( data ) {
+                            response( $.map( data.geonames, function( item ) {
+                                return {
+                                    label: item.name + (item.adminName1 ? ", " + item.adminName1 : "") + ", " + item.countryName,
+                                    value: item.name,
+                                    stateOrProvince: item.adminName1,
+                                    countryName: item.countryName
+                                }
+                            }));
+                        }
+                    });
+                },
+                minLength: 2,
+                select: function( event, ui ) {
+                    if (ui.item) {
+                        $("#id_shop_state").val(ui.item.stateOrProvince);
+                        $("#id_shop_country").val(ui.item.countryName);
+                        $("#id_shop_zip").val("");
+                    }
+                }
+            });
+        });
+    </script>
+
 	
 				<form action="/review/{{ model_id }}/add/" method="post">{% csrf_token %}
 				{{ form.as_p }}
