--- a/notebookcompare/notebookapp/templates/userpanel.html
+++ b/notebookcompare/notebookapp/templates/userpanel.html
@@ -3,9 +3,8 @@
 
 {% block content %}
 
-	<a href="/userpanel/changepassword"><img src="{% static "imatges/key-icon.png" %}" width="150"></a></img> 
-	<a href="/userpanel/my-reviews/"><img src="{% static "imatges/user-reviews.jpg" %}" width="150"></a></img>
-	<a href="/userpanel/my-laptops/"><img src="{% static "imatges/usercomputer.png" %}" width="150"></a> </img>
+	<a href="/userpanel/my-reviews/"><img src="{% static "imatges/user-reviews.jpg" %}" width="150" ALT="See my reviews">See your reviews</a></img><br/>
+ 	<a href="/userpanel/my-laptops/"><img src="{% static "imatges/usercomputer.png" %}" width="150" ALT="See my laptops">See your laptops</a></img>
 
 
 {% endblock %}
