--- a/notebookcompare/notebookapp/templates/brands/detailbrand.html
+++ b/notebookcompare/notebookapp/templates/brands/detailbrand.html
@@ -11,7 +11,7 @@
 
 		<h2>{{ name }}</h2>  
 		<h3>{{ country }}  </h3>
-		<a href="{{ web }}"> Website </a>
+		<a href="http://{{ web }}"> Website </a>
 		
 		</br>
 		</center>
